# flow-pipe-stage-example

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker.yaml
flows/: my_flow.yaml
stages/uppercase_transform/: CMakeLists.txt  uppercase_transform.cc  uppercase_transform.proto
